# scam

./: Cargo.toml  README.md
src/: checksum.rs  cli.rs  copy.rs  engine.rs  error.rs  lib.rs  main.rs  metadata.rs  model.rs  plan.rs  progress.rs
tests/: cli.rs  integration.rs
